Moved Settings classes to new package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
                 android:name=".view.activities.PrivateMessageActivity" />
 
         <activity
-                android:name=".view.activities.SettingsActivity" />
+                android:name=".settings.SettingsActivity" />
 
         <activity
                 android:name=".view.activities.AboutAppActivity" />
