Moved Comments and Private Message classes to new package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         </activity>
 
         <activity
-                android:name=".view.activities.LinkCommentsActivity" />
+                android:name=".listings.comments.LinkCommentsActivity" />
 
         <activity
                 android:name=".listings.inbox.InboxActivity" />
