Set compileSdkVersion to 24 for debug builds only

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
     buildTypes {
         debug {
+            compileSdkVersion 24
             debuggable true
             minifyEnabled false
             applicationIdSuffix ".debug"
