Dialog for reporting links and comments (#18)
* Set up basics of Activity & dialog for reporting listings

* Make API call for report form and pass options into ReportDialog

* Pass result back to ReportActivity and display Toast for now

* Fixed theme for ReportActivity

* Refactoring

* Switch to calling subreddit rules endpoint

* Refactoring

* Added API call for reporting listings

* Fixing cancel behavior

* WIP - Display success message when reporting listings

* Set compileSdkVersion to 24 for debug builds only

* Fix crash in ReportActivity

* WIP - Custom view for report dialog

* WIP - Custom view for report dialog

* Limit one checked button at a time

* Added option for the 'other' report category

* Refactoring

* Update RxReddit to fix report serialization issue

* Refactoring

* Fixing result from ReportActivity

* Refactoring

* Error handling for report dialog

* Refactoring

* Ported site rules to resources

* Applying fix for other_reason issue

* Refactoring

* Refactoring

* Refactoring

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ subprojects {
         playServicesVersion = "9.6.1"
         picassoVersion = "2.5.2"
         butterknifeVersion = "8.4.0"
-        rxRedditVersion = "0.9"
+        rxRedditVersion = "c0a5a606de876b4a07ab652afb09f747a0294583"
         rxAndroidVersion = "1.2.1"
         rxJavaVersion = "1.2.1"
         rxJavaProguardVersion = "1.2.1.0"
