--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,6 @@ dependencies {
     compile project(":logging")
 
     compile "com.android.support:appcompat-v7:$project.ext.supportLibraryVersion"
-    compile "com.android.support:support-v4:$project.ext.supportLibraryVersion"
     compile "com.android.support:design:$project.ext.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$project.ext.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$project.ext.supportLibraryVersion"
@@ -96,7 +95,7 @@ dependencies {
         transitive = true;
     }
 
-    compile "com.squareup.picasso:picasso:$project.ext.picassoVersion"
+    compile "com.github.bumptech.glide:glide:$project.ext.glideVersion"
 
     compile "com.jakewharton:butterknife:$project.ext.butterknifeVersion"
     apt "com.jakewharton:butterknife-compiler:$project.ext.butterknifeVersion"
