--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
                 android:name=".subredditinfo.SubredditInfoActivity" />
 
         <activity
-                android:name=".listings.ReportActivity"
+                android:name=".listings.report.ReportActivity"
                 android:theme="@style/TransparentTheme" />
 
     </application>
