--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ subprojects {
         fragmentArgsVersion = "3.0.2"
         leakCanaryVersion = "1.3.1"
         junitVersion = "4.12"
+        robolectricVersion = "3.0"
         mockitoVersion = "1.10.19"
     }
 }
