Separated DI modules for testing, but tests are unable to find resources in main src set

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         buildConfigField "long", "BUILD_TIME_UTC", "" + getTime()
         buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
         buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -118,7 +119,17 @@ dependencies {
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$project.ext.leakCanaryVersion"
 
     // Test dependencies
-    testCompile "junit:junit:$project.ext.junitVersion"
-    testCompile "org.robolectric:robolectric:$project.ext.robolectricVersion"
-    testCompile "org.mockito:mockito-core:$project.ext.mockitoVersion"
+//    testCompile "junit:junit:$project.ext.junitVersion"
+//    testCompile "org.robolectric:robolectric:$project.ext.robolectricVersion"
+//    testCompile "org.mockito:mockito-core:$project.ext.mockitoVersion"
+//    testApt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
+
+    androidTestCompile "junit:junit:$project.ext.junitVersion"
+//    androidTestCompile "org.robolectric:robolectric:$project.ext.robolectricVersion"
+    androidTestCompile "org.mockito:mockito-core:$project.ext.mockitoVersion"
+    androidTestApt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
+
+    androidTestCompile "com.android.support:support-annotations:$project.ext.supportLibraryVersion"
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
 }
