Improve linkification in markdown (#33)
* Linkifying subreddit and user page links, and mitigating the emphasis formatting issues with special parsing

* Linkifying URLs starting with a protocol

* Added junit, robolectric, and mockito test dependencies

* Abstracted MarkdownParser from MarkdownTextView

* Separated DI modules for testing, but tests are unable to find resources in main src set

* Wrote first tests

* Fixed some logic within the unformatting of URLSpans

* Adding tests

* Fixes

* More tests

* Fixed stuff

* Fixed more stuff

* style

* Added method to strip URLSpans that occur within other URLSpans, in case separate Linkify calls hit the same string in multiple places

* Added tests for avoiding r/ and u/ links that aren't to a subreddit

* Added some more failing cases

* Checkpoint commit - Changing over to using Patterns.WEB_URL but need to implement a custom UrlSpan

* Another checkpoint

* holy shit they're all working

* Removed extra code from before

* Getting closer to perfect URLs with regex in Patterns

* Getting closer to perfect URLs with regex in Patterns

* Updated test for ending paren to fail

* Fixing tests

* Notes

* Specific tests

* Went back to using custom regex, stuff is working better

* Refactoring

* More tests

* Added a test

* Refactoring

* Added more tests

* Added test for ellipses

* No protocol matcher doesn't match without a leading www.

* Fixing no protocol regex

* Fixing subreddit link regex

* Include leading paren for reddit links and add logic to properly trim it out

* Convert URLSpans to URLSpanNoUnderline

* Added yet another failing test

* Remove custom Linkify

* Slight improvement

* Refactoring

* Break up tests

* WIP - Starting new underscore processing algorithm

* Method to clean list of LinkMarkers

* Algorithm for cleaning input string of all underscores

* Algorithm for restoring underscores from the

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         buildConfigField "long", "BUILD_TIME_UTC", "" + getTime()
         buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
         buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -108,13 +109,22 @@ dependencies {
 
     compile "com.google.dagger:dagger:$project.ext.daggerVersion"
     apt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
+    testApt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
 
     compile "uk.co.chrisjenx:calligraphy:$project.ext.calligraphyVersion"
 
     compile "com.hannesdorfmann.fragmentargs:annotation:$project.ext.fragmentArgsVersion"
     apt "com.hannesdorfmann.fragmentargs:processor:$project.ext.fragmentArgsVersion"
 
-    // Debugging dependencies
     debugCompile "com.squareup.leakcanary:leakcanary-android:$project.ext.leakCanaryVersion"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$project.ext.leakCanaryVersion"
+
+    // Test dependencies
+    androidTestCompile "junit:junit:$project.ext.junitVersion"
+    androidTestCompile "org.mockito:mockito-core:$project.ext.mockitoVersion"
+    androidTestApt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
+
+    androidTestCompile "com.android.support:support-annotations:$project.ext.supportLibraryVersion"
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
 }
