Use OkHttp integration library for glide

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ subprojects {
         contraintLayoutVersion = "1.0.0-beta4"
         playServicesVersion = "10.0.1"
         glideVersion = "3.7.0"
+        glideOkhttpVersion = "1.4.0@aar"
         butterknifeVersion = "8.4.0"
         rxRedditVersion = "c0a5a606de876b4a07ab652afb09f747a0294583"
         rxAndroidVersion = "1.2.1"
