--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     compile "com.google.android.gms:play-services-analytics:$project.ext.playServicesVersion"
 
     compile "com.github.bumptech.glide:glide:$project.ext.glideVersion"
+    compile "com.github.bumptech.glide:okhttp3-integration:$project.ext.glideOkhttpVersion"
 
     compile "com.jakewharton:butterknife:$project.ext.butterknifeVersion"
     apt "com.jakewharton:butterknife-compiler:$project.ext.butterknifeVersion"
