--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
 
 subprojects {
     ext {
+        KOTLIN_VERSION = "1.1.2-2"
         compileSdkVersion = 25
         targetSdkVersion = 25
         buildToolsVersion = "25.0.0"
