--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    repositories {
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.1'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
-        //noinspection GradleDynamicVersion
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
-
-plugins {
-    id "me.tatarka.retrolambda" version "3.3.0"
-}
-
-allprojects {
-    repositories {
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
-}
-
-subprojects {
     ext {
-        compileSdkVersion = 25
-        targetSdkVersion = 25
-        buildToolsVersion = "25.0.0"
+        KOTLIN_VERSION = "1.1.2-2"
+        ANDROID_GRADLE_PLUGIN = "2.3.2"
+        COMPILE_SDK_VERSION = 25
+        TARGET_SDK_VERSION = 25
+        BUILD_TOOLS_VERSION = "25.0.0"
         supportLibraryVersion = "25.1.0"
         contraintLayoutVersion = "1.0.0-beta4"
         playServicesVersion = "10.0.1"
@@ -48,6 +22,30 @@ subprojects {
         leakCanaryVersion = "1.3.1"
         junitVersion = "4.12"
         mockitoVersion = "1.10.19"
+    }
+    repositories {
+        jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.1'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        //noinspection GradleDynamicVersion
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+
+plugins {
+    id "me.tatarka.retrolambda" version "3.3.0"
+}
+
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
