--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties' // Temporary until RxJava1 is removed
+    }
 }
 
 static def getTime() {
@@ -102,6 +106,7 @@ dependencies {
     debugCompile project(':mock-api')
 
     compile "io.reactivex:rxandroid:$rxAndroidVersion"
+    compile "io.reactivex.rxjava2:rxandroid:$rxAndroid2Version"
     compile "io.reactivex:rxjava:$rxJavaVersion"
     compile "com.artemzin.rxjava:proguard-rules:$rxJavaProguardVersion"
 
