--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         butterknifeVersion = "8.4.0"
         rxRedditVersion = "77a26bda6dd210fde320341ace317d49d9d8414b"
         rxAndroidVersion = "1.2.1"
+        rxAndroid2Version = "2.0.1"
         rxJavaVersion = "1.2.3"
         rxJavaProguardVersion = "1.2.3.0"
         timeSinceTextViewVersion = "1.3"
