Remove RxJava from dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,10 +105,8 @@ dependencies {
     compile "com.github.damien5314.RxReddit:android:$rxRedditVersion"
     debugCompile project(':mock-api')
 
-    compile "io.reactivex:rxandroid:$rxAndroidVersion"
-    compile "io.reactivex.rxjava2:rxandroid:$rxAndroid2Version"
-    compile "io.reactivex:rxjava:$rxJavaVersion"
-    compile "com.artemzin.rxjava:proguard-rules:$rxJavaProguardVersion"
+    compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
+    compile "io.reactivex.rxjava2:rxandroid:$RXANDROID_VERSION"
 
     compile "com.github.damien5314:TimeSinceTextView:$timeSinceTextViewVersion"
 
