--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,8 @@ buildscript {
         glideOkhttpVersion = "1.4.0@aar"
         butterknifeVersion = "8.4.0"
         rxRedditVersion = "77a26bda6dd210fde320341ace317d49d9d8414b"
-        rxAndroidVersion = "1.2.1"
-        rxAndroid2Version = "2.0.1"
-        rxJavaVersion = "1.2.3"
-        rxJavaProguardVersion = "1.2.3.0"
+        RXJAVA_VERSION = "2.1.0"
+        RXANDROID_VERSION = "2.0.1"
         timeSinceTextViewVersion = "1.3"
         daggerVersion = "2.8"
         calligraphyVersion = "2.2.0"
