--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,9 @@ buildscript {
         glideVersion = "3.7.0"
         glideOkhttpVersion = "1.4.0@aar"
         butterknifeVersion = "8.4.0"
-        rxRedditVersion = "ef739c3a5bba7c49e6f027dd8c4da8bc7e147aa6"
-        rxAndroidVersion = "1.2.1"
-        rxJavaVersion = "1.2.3"
-        rxJavaProguardVersion = "1.2.3.0"
+        rxRedditVersion = "77a26bda6dd210fde320341ace317d49d9d8414b"
+        RXJAVA_VERSION = "2.1.0"
+        RXANDROID_VERSION = "2.0.1"
         timeSinceTextViewVersion = "1.3"
         daggerVersion = "2.8"
         calligraphyVersion = "2.2.0"
