--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         TARGET_SDK_VERSION = 25
         BUILD_TOOLS_VERSION = "25.0.0"
         supportLibraryVersion = "25.3.1"
-        contraintLayoutVersion = "1.0.0-beta4"
+        contraintLayoutVersion = "1.0.2"
         playServicesVersion = "10.2.6"
         glideVersion = "3.7.0"
         glideOkhttpVersion = "1.4.0@aar"
