--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,47 +92,47 @@ dependencies {
     compile project(":bypass")
     compile project(":logging")
 
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    compile "com.android.support:design:$supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:$contraintLayoutVersion"
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
 
     // Required for Flurry
-    compile "com.google.android.gms:play-services-analytics:$playServicesVersion"
+    compile "com.google.android.gms:play-services-analytics:$PLAY_SERVICES_VERSION"
 
-    compile "com.github.bumptech.glide:glide:$glideVersion"
-    compile "com.github.bumptech.glide:okhttp3-integration:$glideOkhttpVersion"
+    compile "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    compile "com.github.bumptech.glide:okhttp3-integration:$GLIDE_OKHTTP_VERSION"
 
-    compile "com.jakewharton:butterknife:$butterknifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
+    compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-    compile "com.github.damien5314.RxReddit:library:$rxRedditVersion"
-    compile "com.github.damien5314.RxReddit:android:$rxRedditVersion"
+    compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
+    compile "com.github.damien5314.RxReddit:android:$RXREDDIT_VERSION"
     debugCompile project(':mock-api')
 
     compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
     compile "io.reactivex.rxjava2:rxandroid:$RXANDROID_VERSION"
 
-    compile "com.github.damien5314:TimeSinceTextView:$timeSinceTextViewVersion"
+    compile "com.github.damien5314:TimeSinceTextView:$TIMESINCETEXTVIEW_VERSION"
 
-    compile "com.google.dagger:dagger:$daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    compile "uk.co.chrisjenx:calligraphy:$calligraphyVersion"
+    compile "uk.co.chrisjenx:calligraphy:$CALLIGRAPHY_VERSION"
 
-    compile "com.hannesdorfmann.fragmentargs:annotation:$fragmentArgsVersion"
-    annotationProcessor "com.hannesdorfmann.fragmentargs:processor:$fragmentArgsVersion"
+    compile "com.hannesdorfmann.fragmentargs:annotation:$FRAGMENTARGS_VERSION"
+    annotationProcessor "com.hannesdorfmann.fragmentargs:processor:$FRAGMENTARGS_VERSION"
 
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$LEAK_CANARY_VERSION"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANARY_VERSION"
 
     // Test dependencies
-    androidTestCompile "junit:junit:$junitVersion"
-    androidTestCompile "org.mockito:mockito-core:$mockitoVersion"
-    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    androidTestCompile "junit:junit:$JUNIT_VERSION"
+    androidTestCompile "org.mockito:mockito-core:$MOCKITO_VERSION"
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    androidTestCompile "com.android.support:support-annotations:$supportLibraryVersion"
+    androidTestCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
 }
