--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -25,13 +25,13 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
 
-    compile "com.jakewharton.timber:timber:4.3.1"
+    compile "com.jakewharton.timber:timber:$TIMBER_VERSION"
     compile("com.crashlytics.sdk.android:crashlytics:2.5.1@aar") {
         transitive = true
     }
 
-    testCompile "junit:junit:$junitVersion"
-    testCompile "org.mockito:mockito-core:$mockitoVersion"
+    testCompile "junit:junit:$JUNIT_VERSION"
+    testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"
 }
