--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -14,9 +14,9 @@ apply plugin: 'kotlin'
 apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
-    compile "com.github.damien5314.RxReddit:library:$rxRedditVersion"
+    compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
-    testCompile "junit:junit:$junitVersion"
+    testCompile "junit:junit:$JUNIT_VERSION"
 }
 
 //sourceSets.main {
