--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion COMPILE_SDK_VERSION
     buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
