--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,27 @@
 buildscript {
     ext {
-        KOTLIN_VERSION = "1.1.2-2"
+        KOTLIN_VERSION = "1.1.2-4"
         ANDROID_GRADLE_PLUGIN = "2.3.2"
-        COMPILE_SDK_VERSION = 25
-        TARGET_SDK_VERSION = 25
+        COMPILE_SDK_VERSION = 26
+        TARGET_SDK_VERSION = 26
         BUILD_TOOLS_VERSION = "25.0.0"
-        supportLibraryVersion = "25.3.1"
-        contraintLayoutVersion = "1.0.0-beta4"
-        playServicesVersion = "10.2.6"
-        glideVersion = "3.7.0"
-        glideOkhttpVersion = "1.4.0@aar"
-        butterknifeVersion = "8.4.0"
-        rxRedditVersion = "77a26bda6dd210fde320341ace317d49d9d8414b"
+        SUPPORT_LIBRARY_VERSION = "25.3.1"
+        CONSTRAINT_LAYOUT_VERSION = "1.0.2"
+        PLAY_SERVICES_VERSION = "10.2.6"
+        GLIDE_VERSION = "3.7.0"
+        GLIDE_OKHTTP_VERSION = "1.4.0@aar"
+        BUTTERKNIFE_VERSION = "8.4.0"
+        RXREDDIT_VERSION = "77a26bda6dd210fde320341ace317d49d9d8414b"
         RXJAVA_VERSION = "2.1.0"
         RXANDROID_VERSION = "2.0.1"
-        timeSinceTextViewVersion = "1.3"
-        daggerVersion = "2.8"
-        calligraphyVersion = "2.2.0"
-        fragmentArgsVersion = "3.0.2"
-        leakCanaryVersion = "1.3.1"
-        junitVersion = "4.12"
-        mockitoVersion = "1.10.19"
+        TIMESINCETEXTVIEW_VERSION = "1.3"
+        DAGGER_VERSION = "2.8"
+        CALLIGRAPHY_VERSION = "2.2.0"
+        FRAGMENTARGS_VERSION = "3.0.2"
+        TIMBER_VERSION = "4.3.1"
+        LEAK_CANARY_VERSION = "1.3.1"
+        JUNIT_VERSION = "4.12"
+        MOCKITO_VERSION = "1.10.19"
     }
     repositories {
         jcenter()
@@ -29,15 +30,15 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.1'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.4'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
 plugins {
-    id "me.tatarka.retrolambda" version "3.3.0"
+    id "me.tatarka.retrolambda" version "3.6.0"
 }
 
 allprojects {
