--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
     }
 }
@@ -14,9 +14,9 @@ apply plugin: 'kotlin'
 apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
-    compile "com.github.damien5314.RxReddit:library:$rxRedditVersion"
+    compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
-    testCompile "junit:junit:$junitVersion"
+    testCompile "junit:junit:$JUNIT_VERSION"
 }
 
 //sourceSets.main {
