--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
         KOTLIN_VERSION = "1.1.2-4"
-        ANDROID_GRADLE_PLUGIN = "2.3.2"
+        ANDROID_GRADLE_PLUGIN = "3.0.0-alpha3"
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
-        BUILD_TOOLS_VERSION = "25.0.0"
+        BUILD_TOOLS_VERSION = "26.0.0"
         SUPPORT_LIBRARY_VERSION = "25.3.1"
         CONSTRAINT_LAYOUT_VERSION = "1.0.2"
         PLAY_SERVICES_VERSION = "10.2.6"
@@ -26,19 +26,16 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.4'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.0-SNAPSHOT'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
     }
-}
-
-plugins {
-    id "me.tatarka.retrolambda" version "3.6.0"
 }
 
 allprojects {
