--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.library'
 repositories {
     jcenter()
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://maven.google.com/" }
 }
 
 android {
