--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -4,17 +4,17 @@ buildscript {
     }
 
     dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
     compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
+    compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
+
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
     testCompile "junit:junit:$JUNIT_VERSION"
 }
@@ -33,7 +33,3 @@ dependencies {
 //  into "${buildDir}/classes/main"
 //}
 //processResources.dependsOn copyResources
-
-retrolambda {
-    javaVersion JavaVersion.VERSION_1_7
-}
