--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "com.github.ben-manes.versions"
 apply plugin: 'io.fabric'
 
 repositories {
+    jcenter()
     maven { url "https://maven.google.com/" }
     maven { url 'https://maven.fabric.io/public' }
     maven { url "https://jitpack.io" }
