--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -1,15 +1,10 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'kotlin'
+
+repositories {
+    jcenter()
+    maven { url "https://jitpack.io" }
+}
 
 dependencies {
     compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
@@ -18,18 +13,3 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
     testCompile "junit:junit:$JUNIT_VERSION"
 }
-
-//sourceSets.main {
-//  java {
-//    exclude 'rxreddit/test/**'
-//  }
-//}
-
-// broken - https://code.google.com/p/android/issues/detail?id=64887
-//sourceSets.main.resources.srcDir('src/main/resources')
-
-//task copyResources(type: Copy) {
-//  from "${projectDir}/src/main/resources"
-//  into "${buildDir}/classes/main"
-//}
-//processResources.dependsOn copyResources
