--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 
 repositories {
     jcenter()
+    maven { url "https://maven.google.com/" }
     maven { url 'https://maven.fabric.io/public' }
 }
 
