--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -1,39 +1,15 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'me.tatarka.retrolambda'
+
+repositories {
+    jcenter()
+    maven { url "https://jitpack.io" }
+}
 
 dependencies {
     compile "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
+    compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
+
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
     testCompile "junit:junit:$JUNIT_VERSION"
-}
-
-//sourceSets.main {
-//  java {
-//    exclude 'rxreddit/test/**'
-//  }
-//}
-
-// broken - https://code.google.com/p/android/issues/detail?id=64887
-//sourceSets.main.resources.srcDir('src/main/resources')
-
-//task copyResources(type: Copy) {
-//  from "${projectDir}/src/main/resources"
-//  into "${buildDir}/classes/main"
-//}
-//processResources.dependsOn copyResources
-
-retrolambda {
-    javaVersion JavaVersion.VERSION_1_7
 }
