--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        KOTLIN_VERSION = "1.1.2-4"
-        ANDROID_GRADLE_PLUGIN = "3.0.0-alpha4"
+        KOTLIN_VERSION = "1.1.4-2"
+        ANDROID_GRADLE_PLUGIN = "3.0.0-beta2"
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
         BUILD_TOOLS_VERSION = "26.0.0"
@@ -31,11 +31,11 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.0-SNAPSHOT'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
+        classpath "com.jakewharton.hugo:hugo-plugin:1.2.1"
+        classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.14.0"
         //noinspection GradleDynamicVersion
-        classpath 'io.fabric.tools:gradle:1.22.2'
+        classpath "io.fabric.tools:gradle:1.22.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
     }
 }
